# odl-etl

./: README.md  mitx_residential_etl.py  requirements.txt
email_mapping/: email_mapping.py  pyproject.toml  requirements.txt
mailgun_crawler/: manage_crawler_targets.py
mit-open/: Pipfile  email_mapping.py  etl_settings.yml  requirements.txt
mitx/: Pipfile  env.bash  mitx_etl.py  mitx_residential_etl.py  pyproject.toml  requirements.txt
